--- a/table/src/app/components/datatable/datatable.component.html
+++ b/table/src/app/components/datatable/datatable.component.html
@@ -4,36 +4,18 @@
   </caption>
   <thead>
     <tr>
-      <th scope="col">Account</th>
-      <th scope="col">Due Date</th>
-      <th scope="col">Amount</th>
-      <th scope="col">Period</th>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Company</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td scope="row" data-label="Account">Visa - 3412</td>
-      <td data-label="Due Date">04/01/2016</td>
-      <td data-label="Amount">$1,190</td>
-      <td data-label="Period">03/01/2016 - 03/31/2016</td>
-    </tr>
-    <tr>
-      <td scope="row" data-label="Account">Visa - 6076</td>
-      <td data-label="Due Date">03/01/2016</td>
-      <td data-label="Amount">$2,443</td>
-      <td data-label="Period">02/01/2016 - 02/29/2016</td>
-    </tr>
-    <tr>
-      <td scope="row" data-label="Account">Corporate AMEX</td>
-      <td data-label="Due Date">03/01/2016</td>
-      <td data-label="Amount">$1,181</td>
-      <td data-label="Period">02/01/2016 - 02/29/2016</td>
-    </tr>
-    <tr>
-      <td scope="row" data-label="Acount">Visa - 3412</td>
-      <td data-label="Due Date">02/01/2016</td>
-      <td data-label="Amount">$842</td>
-      <td data-label="Period">01/01/2016 - 01/31/2016</td>
+    <tr *ngFor="let user of users">
+      <td scope="row" data-label="Name">{{ user.name }}</td>
+      <td data-label="Email">{{ user.email }}</td>
+      <td data-label="Phone">{{ user.phone }}</td>
+      <td data-label="Company">{{ user.company }}</td>
     </tr>
   </tbody>
 </table>
